--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="style.css" />
-    <title>Weather Dashboard</title>
+    <title>Weather Central</title>
     <script>
       setInterval(() => {
  var time = moment().format('LT');
@@ -70,8 +70,11 @@
 
 					</div>
 
-					<div class="forcast">
-						<h4>5-Day Forcast:</h4>
+					
+
+
+					<div class="forecast">
+						<h4>5-Day Forecast:</h4>
 					</div>
 
 					<div class="row r2b justify-content-between">
@@ -137,6 +140,9 @@
 				</div>
 			</div>
 		</div>
+		<br>
+
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 		<script
 			src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
